Removed unnecessary testing code

--- a/3. Bigram Markov Chain Model.ipynb
+++ b/3. Bigram Markov Chain Model.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -68,28 +68,24 @@
     "        for i in range(0,len(words)-1):\n",
     "            first = words[i]\n",
     "            second = words[i+1]\n",
-    "    \n",
-    "            \n",
+    "             \n",
     "            if i == len(words)-2:\n",
     "                next_word = \"<END>\"\n",
     "            else:\n",
-    "                next_word = words[i+1]\n",
+    "                next_word = words[i+2]\n",
     "            \n",
     "            pair = (first, second)\n",
     "            if pair in chain:\n",
     "                chain[pair].append(next_word)\n",
     "            else:\n",
     "                chain[pair] = [next_word]\n",
-    " \n",
-    "            \n",
-    "            \n",
     "\n",
     "    return chain"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -98,8 +94,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['A', 'Uh,', 'A', \"I've\", 'I', 'I', \"That's\", 'Set', 'Round', 'Too', 'And', 'My', 'Double', 'Hand', 'Taxi', 'Yeah,', 'Pool', 'A', 'My', 'I', 'Bad', 'These', 'Saturdays', 'I', 'I', 'I', 'My', 'When', 'Wiseman', 'The', 'She', 'Round', 'A', 'We', 'You', \"It's\", 'The', 'Turn', 'I', 'He', \"River's\", 'If', 'She', 'Oh,', 'I', 'Mosh', 'This', 'How', 'I', 'My', 'Fertilizer', 'That', 'Verse', 'i', 'I', 'Darker', 'Hand', 'Stop', '(I', 'When', 'Frank', \"I'm\", 'Look,', 'Could', 'Talk', 'Something', 'Golden', \"I've\", 'I', 'Lobster', 'I', 'When', 'I', 'Lost', 'Golden', 'Human', 'I', 'Could', 'And', 'Shout', 'Bitches', 'Bitches', 'Gold', 'When']\n",
-      "['Excuse', 'In', 'My', 'when', '(Ooh,', \"I've\", '(You', \"I've\", 'Do', 'Do', \"'Cause\", \"'Cause\", 'Enough', 'Got', 'Since', \"That's\", 'Got', \"Thinkin'\", '(Ooh,', \"I've\"]\n"
+      "['A', 'Uh,', 'A', 'I', \"I've\", 'I', \"That's\", 'Round', 'Too', 'Set', 'My', 'And', 'Double', 'Hand', 'My', 'Pool', 'A', 'Taxi', 'Yeah,', 'Bad', 'I', 'I', 'I', 'These', 'I', 'The', 'Saturdays', 'Wiseman', 'The', \"It's\", 'When', 'I', 'A', 'You', 'Round', 'I', 'She', 'Verse', 'My', 'I', 'We', '(I', 'Stop', 'That', 'He', 'This', 'How', 'Oh,', 'Look,', 'She', 'Frank', 'I', \"River's\", 'When', 'Mosh', 'If', 'sad', 'Something', 'Are', 'I', \"I've\", 'Lobster', 'Disillusioned', 'Darker', 'I', 'Fertilizer', 'When', \"I'm\", 'she', \"it's\", 'Turn', 'Hand', 'Could', 'I', 'Lost', 'Golden', 'Human', 'I', 'Could', 'Bitches', 'Shout', 'Bitches', 'And', 'Gold', 'When']\n"
      ]
     }
    ],
@@ -110,7 +105,7 @@
     "\n",
     "# Call the function you wrote above.\n",
     "chain = train_markov_chain(lyrics)\n",
-    "#print(chain)\n",
+    "\n",
     "# What words tend to start a song (i.e., what words follow the <START> tag?)\n",
     "print(chain[(None, \"<START>\")][:])\n",
     "\n"
@@ -125,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -167,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -176,80 +171,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I thought it weak \n",
-      " But boy you need a cold shower \n",
-      " You cunt I just wanna talk, and conversate \n",
-      " Cause the hardest thing to say it, \n",
-      " Other than how I do \n",
-      " I ain't on no sales floor \n",
-      " Away turf, no Astro \n",
-      " Mesmerized how the strobes glow \n",
-      " Oh yeah, oh yeah Throw team on back like I never ask advice from him 'cause what could he know? \n",
-      " Never make him love me \n",
-      " Despite the life You've had a Pilot Jones Tonight she came stumblin' across my lawn again \n",
-      " We'd drive to Syd's, had the X6 back then \n",
-      " Fell asleep in the heat of it all \n",
-      " Girl you know I won't be going backwards \n",
-      " [Hook] my golden girl \n",
-      " who's this other guy that sending you these flowers \n",
-      " oh now you wanna get her involved \n",
-      " Madly involved Hittin' stones in glass homes \n",
-      " You're wet and you're warm just like you \n",
-      " Breath till I evaporated \n",
-      " My crew saved your crew like niggas came through the valley \n",
-      " Freeway Despite our history, yeah \n",
-      " Sleeve rips off, I slip, I fall short of what a life \n",
-      " Sweet Mother Mary, sweet Father Joseph, sweet Jesus We made it in the sky is pink and white lines \n",
-      " Talking 'bout a real mermaid \n",
-      " You didn't need to wonder why \n",
-      " Cause this little hustle's getting you by \n",
-      " Fuck you niggas \n",
-      " You know I love it when I find \n",
-      " You too wild, you too wild And I could tell \n",
-      " How you feel? \n",
-      " You know I can't take no hints (yeah, yeah) \n",
-      " Bicycles and pegs, yeah, wallowed up affairs much \n",
-      " Durag on my back, I'll take you down the function \n",
-      " Now your baby momma ain't so vicious, all she want is you to myself \n",
-      " Gone off tabs of that acid \n",
-      " Form me a job since 2009 \n",
-      " I thought it weak \n",
-      " But we were kids, we hand painted strawberries on a way to say it, it is to just say yes, let the future fall into place \n",
-      " I make it up \n",
-      " Down there, dancin' \n",
-      " I don't want none \n",
-      " Love me none, love me none \n",
-      " Love me \n",
-      " I won't need you now \n",
-      " Right now, right now \n",
-      " On me, on me) \n",
-      " On my shoulder if you feel more like I really give one \n",
-      " And when you often \n",
-      " Goin' in \n",
-      " I couldn't see you coming \n",
-      " For you it's just me and my baby (yo we goin' to work on my head, don't close my eyes and feel the crash Too many bowls of that spend the night up \n",
-      " Built your structures with you \n",
-      " Someone out there \n",
-      " I found you laying down with Samson and his full head of her own tour But you're beautiful to me \n",
-      " When I feel \n",
-      " Confusion can give way to say or that I miss you, missing you insane. \n",
-      " But I gotta know for sure \n",
-      " So just say yes, let the high Crack rock crack rock Crooked cop dead cop \n",
-      " No i dont like you a lot \n",
-      " I Can't do without You \n",
-      " Shawty my plane just now touched Down \n",
-      " Imma send a Car to come get you some ice Life goes in cycles \n",
-      " Everything grows \n",
-      " Can you meet me by the door \n",
-      " Remember how it was \n",
-      " Climb trees, Michael Jackson, all in my body \n",
-      " New watch, good times here, and I (Just you and I) are lost Lost \n",
-      " Lost in the city \n",
-      " Round the city \n",
-      " Round the clock \n",
-      " Everybody needs you \n",
-      " Until the time we die \n",
-      " Oh-oh,\n"
+      "I got on your lower back \n",
+      " Now I'm standing here after all.. \n",
+      " I feel their smiles on me when I'm gone, love me none \n",
+      " Love And you're on (?) \n",
+      " Behind wet faces \n",
+      " Slip my pants back on \n",
+      " ohhh wait i wrote a letter to the sky \n",
+      " Inhale, in hell there's heaven \n",
+      " I'mma stay right here with you \n",
+      " it's gonna take you losing her \n",
+      " She's better with time. \n",
+      " But I can't feel my face, what am I Hemingway \n",
+      " She said she wanna be Finn from Adventure in Time The blinds wide open so he can \n",
+      " Couldn't slow us down \n",
+      " The laws of the mind) \n",
+      " 'Till the time we die \n",
+      " Oh-oh, ohhh\n"
      ]
     }
    ],
