--- a/1. Scraping Song Lyrics.ipynb
+++ b/1. Scraping Song Lyrics.ipynb
@@ -42,42 +42,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'http://www.metrolyrics.com/sierra-leone-lyrics-frank-ocean.html'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "song_links = []\n",
     "\n",
     "\n",
     "    \n",
-    "req = requests.get('http://www.metrolyrics.com/Frank-ocean-lyrics.html')\n",
+    "req = requests.get('http://www.metrolyrics.com/kanye-west-lyrics.html')\n",
     "time.sleep(0.1)\n",
     "soup = BeautifulSoup(req.text, 'html.parser')\n",
     "for td in soup.find_all(\"td\"):\n",
     "    url = td.find('a')\n",
     "    if url != None:\n",
-    "        song_links.append(url[\"href\"])\n",
-    "        \n",
-    "        \n",
-    "song_links[41]"
+    "        song_links.append(url[\"href\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -113,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -130,7 +116,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\"A tornado flew around my room before you came <N> Excuse the mess it made, it usually doesn't rain <N> In Southern California, much like Arizona <N> My eyes don't shed tears, but boy they pour <N> when im thinking 'bout you <N> (Ooh, no, no, no) <N> I've been thinkin' 'bout you <N> (You know, know, know) <N> I've been thinkin' 'bout you <N> Do you think about me still? <N> Do ya, do ya? Or do you not think so far ahead? <N> 'Cause I been thinkin' 'bout forever (Oooh) Or do you not think so far ahead? <N> 'Cause I been thinkin' 'bout forever (Oooh) No, I don't like you, I just thought you were cool <N> Enough to kick it <N> Got a beach house I could sell you in Idaho <N> Since you think I don't love you, I just thought you were cute <N> That's why I kissed you <N> Got a fighter jet, I don't get to fly it though I'm lying down <N> Thinkin' 'bout you <N> (Ooh, no, no, no) <N> I've been thinkin' 'bout you <N> (You know, know, know) <N> I've been thinkin' 'bout you <N> Do you think about me still? <N> Do ya, do ya? Or do you not think so far ahead? <N> 'Cause I been thinkin' 'about forever (Oooh) Or do you not think so far ahead? <N> 'Cause I been thinkin' 'about forever (Oooh) Yes, of course <N> I remember, how could I forget? <N> How you feel? <N> You know, you were my first time <N> A new feel <N> It won't ever get old, not in my soul not in <N> my spirit, keep it alive <N> We'll go down this road <N> 'Til it turns from color to black and white Or do you not think so far ahead? (Ahead) <N> 'Cause I been thinkin' 'about forever (Oooh) Or do you not think so far ahead? (Ahead) <N> 'Cause I been thinkin' 'about forever (Oooh)\"\n"
+      "\"N-now th-that that don't kill me <N> Can only make me stronger <N> I need you to hurry up now <N> 'Cause I can't wait much longer <N> I know I got to be right now <N> 'Cause I can't get much wronger <N> Man I've been waiting all night now <N> That's how long I been on ya <N> I need you right now Let's get lost tonight <N> You could be my black Kate Moss tonight <N> Play secretary, I'm the boss tonight <N> And you don't give a fuck what they all say, right? <N> Awesome, the Christian in Christian Dior <N> Damn, they don't make em like this anymore <N> I ask, cause I'm not sure: <N> Do anybody make real shit anymore? <N> Bow in the presence of greatness <N> 'Cause right now thou hast forsaken us <N> You should be honored by my lateness <N> That I would even show up to this fake shit <N> So go ahead, go nuts, go apeshit <N> Specially on my Pastel, on my Bape shit <N> Act like you can't tell who made this <N> New Gospel homey, take six and take this, haters N-now th-that that don't kill me <N> Can only make me stronger <N> I need you to hurry up now <N> 'Cause I can't wait much longer <N> I know I got to be right now <N> 'Cause I can't get much wronger <N> Man I've been waiting all night now <N> That's how long I been on ya <N> I need you right now I don't know if you got a man or not <N> If you made plans or not <N> God put me in the plans or not <N> I'm tripping, this drink got me saying a lot <N> But I know that God put you in front of me <N> So how the hell could you front on me? <N> There's a thousand yous, there's only one of me <N> I'm tripping, I'm caught up in the moment, right? <N> 'Cause it's Louis Vuitton Don night <N> So we gonna do everything that Kan like <N> Heard they'd do anything for a Klondike <N> Well, I'd do anything for a blonde dyke <N> And she'll do anything for the limelight <N> And will do anything when the time's right <N> Uh, baby you're makin' it (harder, better, faster, stronger) N-now th-that that don't kill me <N> Can only make me stronger <N> I need you to hurry up now <N> 'Cause I can't wait much longer <N> I know I got to be right now <N> 'Cause I can't get much wronger <N> Man I've been waiting all night now <N> That's how long I been on ya <N> I need you right now You know how long I've been on ya? <N> Since Prince was on Apollonia <N> Since O.J. had isotoners <N> Don't act like I never told ya N-now th-that that don't kill me <N> Can only make me stronger <N> I need you to hurry up now <N> 'Cause I can't wait much longer <N> I know I got to be right now <N> 'Cause I can't get much wronger <N> Man I've been waiting all night now <N> That's how long I been on ya <N> I need you right now You know how long I've been on ya? <N> Since Prince was on Apollonia <N> Since O.J. had isotoners <N> Don't act like I never told ya You know how long I've been on ya? <N> Since Prince was on Apollonia <N> Since O.J. had isotoners <N> Don't act like I never told ya\"\n"
      ]
     }
    ],
@@ -148,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
