--- a/2. Unigram Markov Chain Model.ipynb
+++ b/2. Unigram Markov Chain Model.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -166,53 +166,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Taxi driver \n",
-      " I'ma make myself \n",
-      " All this gets better off solo I'm my sofa yeah Coke on a swan neck \n",
-      " And if we can't hold true \n",
-      " you slide on a position of 'em \n",
-      " Safe in the world \n",
-      " Just roll if you were my bayybee \n",
-      " Remote controller on my arm \n",
-      " Solo, solo \n",
-      " The scales was a stain on Earth that you over city building mansions \n",
-      " Ooh nani nani \n",
-      " Stayed up \n",
-      " I couldn't see it. Around. \n",
-      " I need a king? \n",
-      " Get some for me \n",
-      " Every day up \n",
-      " It won't let my night \n",
-      " Shooters killing left your baby Jesus, we live in the lake \n",
-      " The beast will always be Flying, super strength Alright, what's your fridge open, somebody just a beach \n",
-      " Inhale, in something, something, something I don't want your self control the Bonnie . I'ma try on \n",
-      " The other man allowed for you look out and paranoid, so buff and you still blinded of it turns from a quaalude \n",
-      " I'm watchin' my Sonos \n",
-      " Until the morning light year? \n",
-      " I'm still got a zebra \n",
-      " What's a pose \n",
-      " Now I do? What's that clinic aid, we're doing well endowed took advantage \n",
-      " (Ball so just thought the world \n",
-      " You and the home \n",
-      " I feel their smiles on my mind boy \n",
-      " all your choice \n",
-      " When's the dirt clouds \n",
-      " Forgot to sing songs about it would like people \n",
-      " Oh hallelujah, \n",
-      " Bitch I felt a dj plays our good and feel it \n",
-      " But shes been trill \n",
-      " Are you \n",
-      " I miss you, desire \n",
-      " This is for you not think about me 'Cause I didn't need \n",
-      " Police think about it \n",
-      " (Oh you (you showed) \n",
-      " Blue used to be all the mind) \n",
-      " I should hear, that \n",
-      " Won't let me at the dj plays our history \n",
-      " Kumbaya shit every day \n",
-      " You know you \n",
-      " On me, in a god to the city that nigga with me? \n",
-      " It's all try\n"
+      "Lost on the time Yo hickeys on the girls can bring you speak \n",
+      " That soft pink skies will miss you, and U2 \n",
+      " Wanna run my physical, form \n",
+      " Are you here.. \n",
+      " How come back three on all fade to battle rap me \n",
+      " Don't you goin' in, fuck home, always smokin' in another short plane just a daydream \n",
+      " I don't care about it all the one solar flare would cross \n",
+      " Got me by the help that I see \n",
+      " Whatever comes, I've loved the lake around \n",
+      " Sweet baby Jesus, ooh \n",
+      " We're in the future first \n",
+      " It's just me fucked up your day you'll redeem yourself \n",
+      " Let me why \n",
+      " Forrest Gump \n",
+      " Know you (You know you love \n",
+      " I know I do you right behind while I'm gon' be proud of storms, I've loved the crash inside his age \n",
+      " Freeze smoke a back then \n",
+      " If I'm good discussion \n",
+      " Play so \n",
+      " Please gimme immortality\n"
      ]
     }
    ],
@@ -234,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
