--- a/3. Bigram Markov Chain Model.ipynb
+++ b/3. Bigram Markov Chain Model.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -94,7 +94,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['A', 'Uh,', 'A', 'I', \"I've\", 'I', \"That's\", 'Round', 'Too', 'Set', 'My', 'And', 'Double', 'Hand', 'My', 'Pool', 'A', 'Taxi', 'Yeah,', 'Bad', 'I', 'I', 'I', 'These', 'I', 'The', 'Saturdays', 'Wiseman', 'The', \"It's\", 'When', 'I', 'A', 'You', 'Round', 'I', 'She', 'Verse', 'My', 'I', 'We', '(I', 'Stop', 'That', 'He', 'This', 'How', 'Oh,', 'Look,', 'She', 'Frank', 'I', \"River's\", 'When', 'Mosh', 'If', 'sad', 'Something', 'Are', 'I', \"I've\", 'Lobster', 'Disillusioned', 'Darker', 'I', 'Fertilizer', 'When', \"I'm\", 'she', \"it's\", 'Turn', 'Hand', 'Could', 'I', 'Lost', 'Golden', 'Human', 'I', 'Could', 'Bitches', 'Shout', 'Bitches', 'And', 'Gold', 'When']\n"
+      "['N-now', 'I', 'She', 'In', \"I'm\", \"I'm\", 'Like', 'And', 'I', 'All', \"You're\", \"I'm\", 'La', 'Just', 'Well!', \"'As\", 'Oh', 'What', 'I', 'Flashing', 'Uh,', 'I', \"Who's\", 'Bound', 'Real', 'All', 'Yo,', \"I'm\", 'She', 'Lost', 'For', 'You', 'Your', 'Order,', '(Hey', \"It's\", 'What', 'Turn', 'Man', '(Mr.', 'Now', 'I', 'Stadium', 'No', 'Find', 'Are', 'Yeah,', \"I'm\", 'Strange', 'You', 'When', 'One', \"You're\", \"Ain't\", 'Alright,', 'So', 'Human', '(Did', 'Dirt', 'My', '\"We\\'re', 'Let', 'It', \"Talkin'\", 'I', 'You', '1', 'Bittersweet', 'Blazin,', 'La', 'Yeezy', 'I', 'Why', 'While', 'I', 'Just', 'I', 'Feel', 'If', 'It', '\"We\\'re', 'Ooo,', 'No', 'I', 'And', 'Tiimmy,', 'Me', 'Are', 'DJ', 'You']\n"
      ]
     }
    ],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -171,23 +171,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I got on your lower back \n",
-      " Now I'm standing here after all.. \n",
-      " I feel their smiles on me when I'm gone, love me none \n",
-      " Love And you're on (?) \n",
-      " Behind wet faces \n",
-      " Slip my pants back on \n",
-      " ohhh wait i wrote a letter to the sky \n",
-      " Inhale, in hell there's heaven \n",
-      " I'mma stay right here with you \n",
-      " it's gonna take you losing her \n",
-      " She's better with time. \n",
-      " But I can't feel my face, what am I Hemingway \n",
-      " She said she wanna be Finn from Adventure in Time The blinds wide open so he can \n",
-      " Couldn't slow us down \n",
-      " The laws of the mind) \n",
-      " 'Till the time we die \n",
-      " Oh-oh, ohhh\n"
+      "I'm gon' praise Him, praise Him 'til I'm gone \n",
+      " (Good God) \n",
+      " The sun is only half way lit, you haven't come out your crib \n",
+      " You feel it (We zonin') \n",
+      " We deserve, we deserve \n",
+      " We gon' get it poppin' \n",
+      " We invented rock before the Stones got through \n",
+      " We just be \n",
+      " Iconic, ironic\n"
      ]
     }
    ],
